--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
 <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
 <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 <style>
-  body, html { margin:0; padding:0; height:100%; overflow:hidden; background:black; }
-  .floating-ray {
-    position: absolute;
-    width: 200px;
-    height: 200px;
-    background: radial-gradient(circle, rgba(255,255,255,0.15) 0%, transparent 70%);
-    border-radius: 50%;
-    animation: float 6s ease-in-out infinite;
-  }
-  @keyframes float {
-    0% { transform: translateY(0px) translateX(0px) rotate(0deg);}
-    50% { transform: translateY(-50px) translateX(50px) rotate(180deg);}
-    100% { transform: translateY(0px) translateX(0px) rotate(360deg);}
-  }
+body, html { margin:0; padding:0; height:100%; overflow:hidden; background:black; }
+.floating-ray {
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  background: radial-gradient(circle, rgba(255,255,255,0.15) 0%, transparent 70%);
+  border-radius: 50%;
+  animation: float 6s ease-in-out infinite;
+}
+@keyframes float {
+  0% { transform: translateY(0px) translateX(0px) rotate(0deg);}
+  50% { transform: translateY(-50px) translateX(50px) rotate(180deg);}
+  100% { transform: translateY(0px) translateX(0px) rotate(360deg);}
+}
 </style>
 </head>
 <body>
@@ -57,32 +57,28 @@ function KiteQuizTool(){
   const [finished,setFinished]=useState(false);
   const [timeLeft,setTimeLeft]=useState(0);
   const timerRef=useRef(null);
-  const [questions,setQuestions]=useState(()=>{const saved=localStorage.getItem('kite_quiz_questions_v6'); return saved?JSON.parse(saved):PRELOADED_QUESTIONS;});
-  const results=JSON.parse(localStorage.getItem('kite_quiz_results_v6')||'[]');
+  const [questions,setQuestions]=useState(()=>{const saved=localStorage.getItem('kite_quiz_questions_v7'); return saved?JSON.parse(saved):PRELOADED_QUESTIONS;});
+  const results=JSON.parse(localStorage.getItem('kite_quiz_results_v7')||'[]');
 
-  useEffect(()=>{ localStorage.setItem('kite_quiz_questions_v6',JSON.stringify(questions)); },[questions]);
+  useEffect(()=>{ localStorage.setItem('kite_quiz_questions_v7',JSON.stringify(questions)); },[questions]);
   useEffect(()=>{ if(started&&!finished){ setTimeLeft(30); timerRef.current=setInterval(()=>{ setTimeLeft(t=>{ if(t<=1){ clearInterval(timerRef.current); handleSubmitAnswer(null); return 0;} return t-1; }); },1000); return()=>clearInterval(timerRef.current);} },[started,currentIndex,finished]);
 
   function buildDeck(){ let pool=questions.slice(); pool=shuffleArray(pool); const length=Math.min(pool.length,10); const selectedDeck=pool.slice(0,length).map(q=>({...q,choices:shuffleArray(q.choices)})); setDeck(selectedDeck); setCurrentIndex(0); setSelected(null); setScore(0); setFinished(false);}
   function startQuiz(){ buildDeck(); setStarted(true); setMode('player');}
   function resetQuiz(){ setStarted(false); setFinished(false); setDeck([]); setCurrentIndex(0); setSelected(null); clearInterval(timerRef.current); setMode('home');}
-  function saveResult(r){ const prev=[r,...results]; localStorage.setItem('kite_quiz_results_v6',JSON.stringify(prev.slice(0,100)));}
+  function saveResult(r){ const prev=[r,...results]; localStorage.setItem('kite_quiz_results_v7',JSON.stringify(prev.slice(0,100)));}
 
   function handleSubmitAnswer(idx){ clearInterval(timerRef.current); const q=deck[currentIndex]; const original=questions.find(x=>x.id===q.id); const correctChoice=original.choices[original.answerIndex]; const selectedText=idx===null?null:q.choices[idx]; const correct=selectedText===correctChoice; if(correct) setScore(s=>s+1); setSelected(idx); setTimeout(()=>{ if(currentIndex+1>=deck.length){ setFinished(true); setStarted(false); saveResult({date:new Date().toISOString(),score:score+(correct?1:0),total:deck.length}); } else { setCurrentIndex(i=>i+1); setSelected(null); }},700);}
 
   function FloatingRays(){
-    return (
-      <>
-        {[...Array(6)].map((_,i)=>(
-          <div key={i} className="floating-ray" style={{
-            top: Math.random()*80 + 'vh',
-            left: Math.random()*80 + 'vw',
-            animationDuration: (4+Math.random()*4)+'s',
-            opacity: 0.15 + Math.random()*0.25
-          }}></div>
-        ))}
-      </>
-    );
+    return [...Array(6)].map((_,i)=>(
+      <div key={i} className="floating-ray" style={{
+        top: Math.random()*80 + 'vh',
+        left: Math.random()*80 + 'vw',
+        animationDuration: (4+Math.random()*4)+'s',
+        opacity: 0.15 + Math.random()*0.25
+      }}></div>
+    ));
   }
 
   function HomePage(){ 
@@ -118,5 +114,27 @@ function KiteQuizTool(){
   }
 
   function Player(){ 
-    if(!started&&!finished) return null; 
-    const q=deck
+    if(!started && !finished) return null;
+    if(finished){
+      const shareText = `I scored ${score}/${deck.length} on Kite Quiz! Try it yourself!`;
+      const shareUrl = `https://twitter.com/intent/tweet?text=${encodeURIComponent(shareText)}`;
+      return (
+        <div className="relative h-screen flex flex-col justify-center items-center text-white overflow-hidden">
+          <FloatingRays />
+          <img src={LOGO_URL} className="absolute inset-0 w-full h-full object-cover filter blur-xl opacity-40 animate-pulse" alt="Logo bg" />
+          <div className="relative z-10 text-center space-y-4">
+            <h2 className="text-4xl font-bold animate-bounce drop-shadow-lg">🎉 Congratulations! 🎉</h2>
+            <p className="text-2xl">Your Score: {score}/{deck.length}</p>
+            <div className="space-x-3">
+              <button className="px-5 py-2 bg-blue-600 rounded hover:bg-blue-500" onClick={()=>window.open(shareUrl,'_blank')}>Share on X</button>
+              <button className="px-5 py-2 bg-green-600 rounded hover:bg-green-500" onClick={resetQuiz}>Back Home</button>
+            </div>
+          </div>
+        </div>
+      );
+    }
+    const q=deck[currentIndex]; 
+    const original=questions.find(x=>x.id===q.id); 
+    const correct=original.choices[original.answerIndex]; 
+    return (
+      <div className="p-6 min-h-screen bg-gradient-to-b from-purple-700 to-blue-900 text
