--- a/index.html
+++ b/index.html
@@ -64,10 +64,8 @@ function KiteQuizTool(){
   useEffect(()=>{ if(started&&!finished){ setTimeLeft(30); timerRef.current=setInterval(()=>{ setTimeLeft(t=>{ if(t<=1){ clearInterval(timerRef.current); handleSubmitAnswer(null); return 0;} return t-1; }); },1000); return()=>clearInterval(timerRef.current);} },[started,currentIndex,finished]);
 
   function buildDeck(){ 
-    let pool=questions.slice(); 
-    pool=shuffleArray(pool); 
-    const length=Math.min(pool.length,10); 
-    const selectedDeck=pool.slice(0,length).map(q=>({...q,choices:shuffleArray(q.choices)})); 
+    let pool=shuffleArray(questions); 
+    const selectedDeck=pool.slice(0,10).map(q=>({...q,choices:shuffleArray(q.choices)})); 
     setDeck(selectedDeck); 
     setCurrentIndex(0); 
     setSelected(null); 
@@ -75,7 +73,7 @@ function KiteQuizTool(){
     setFinished(false);
   }
   function startQuiz(){ buildDeck(); setStarted(true); setMode('player');}
-  function resetQuiz(){ setStarted(false); setFinished(false); setDeck([]); setCurrentIndex(0); setSelected(null); clearInterval(timerRef.current); setMode('home');}
+  function resetQuiz(){ setStarted(false); setFinished(false); clearInterval(timerRef.current); setMode('home');}
   function saveResult(r){ const prev=[r,...results]; localStorage.setItem('kite_quiz_results_v8',JSON.stringify(prev.slice(0,100)));}
 
   function handleSubmitAnswer(idx){ 
@@ -100,14 +98,12 @@ function KiteQuizTool(){
   }
 
   function FloatingRays(){
-    return [...Array(6)].map((_,i)=>(
-      <div key={i} className="floating-ray" style={{
-        top: Math.random()*80 + 'vh',
-        left: Math.random()*80 + 'vw',
-        animationDuration: (4+Math.random()*4)+'s',
-        opacity: 0.15 + Math.random()*0.25
-      }}></div>
-    ));
+    return [...Array(6)].map((_,i)=>(<div key={i} className="floating-ray" style={{
+      top: Math.random()*80 + 'vh',
+      left: Math.random()*80 + 'vw',
+      animationDuration: (4+Math.random()*4)+'s',
+      opacity: 0.15 + Math.random()*0.25
+    }}></div>));
   }
 
   function HomePage(){ 
@@ -117,6 +113,7 @@ function KiteQuizTool(){
         <img src={LOGO_URL} className="absolute inset-0 w-full h-full object-cover filter blur-xl opacity-40 animate-pulse" alt="Logo bg" />
         <div className="relative z-10 text-center space-y-6">
           <h1 className="text-5xl font-bold animate-bounce drop-shadow-lg">Kite Quiz Tool</h1>
+          <img src={LOGO_URL} className="mx-auto w-32 h-32 rounded-full animate-pulse border-4 border-white shadow-lg" alt="logo" />
           <div className="space-x-4">
             <button className="px-6 py-3 bg-green-600 rounded-lg hover:bg-green-500 transition" onClick={startQuiz}>Start Quiz</button>
             <button className="px-6 py-3 bg-blue-600 rounded-lg hover:bg-blue-500 transition" onClick={()=>setMode('leaderboard')}>Leaderboard</button>
@@ -142,8 +139,9 @@ function KiteQuizTool(){
     );
   }
 
-  function Player(){ 
+  function Player(){
     if(!started && !finished) return null;
+
     if(finished){
       const shareText = `I scored ${score}/${deck.length} on Kite Quiz! Try it yourself!`;
       const shareUrl = `https://twitter.com/intent/tweet?text=${encodeURIComponent(shareText)}`;
@@ -162,6 +160,46 @@ function KiteQuizTool(){
         </div>
       );
     }
-    const q=deck[currentIndex]; 
-    const original=questions.find(x=>x.id===q.id); 
-    const correct=original.choices[original.answerIndex
+
+    const q = deck[currentIndex];
+    const original = questions.find(x=>x.id===q.id);
+    const correctAnswer = original.choices[original.answerIndex];
+
+    return (
+      <div className="relative h-screen flex flex-col justify-center items-center text-white overflow-hidden p-4">
+        <FloatingRays />
+        <img src={LOGO_URL} className="absolute inset-0 w-full h-full object-cover filter blur-xl opacity-40 animate-pulse" alt="Logo bg" />
+        <div className="relative z-10 max-w-xl text-center">
+          <h2 className="text-2xl font-bold mb-2">Time Left: {timeLeft}s</h2>
+          <h3 className="text-3xl mb-6">{q.question}</h3>
+          <div className="grid grid-cols-1 gap-4">
+            {q.choices.map((c,idx)=>(
+              <button key={idx}
+                className={`px-4 py-3 rounded text-lg transition ${
+                  selected===idx
+                    ? (c===correctAnswer?'bg-green-600':'bg-red-600')
+                    : 'bg-gray-800 hover:bg-gray-700'
+                }`}
+                onClick={()=>!selected && handleSubmitAnswer(idx)}>
+                {c}
+              </button>
+            ))}
+          </div>
+        </div>
+      </div>
+    );
+  }
+
+  return (
+    <>
+      {mode==='home' && <HomePage />}
+      {mode==='leaderboard' && <Leaderboard />}
+      {mode==='player' && <Player />}
+    </>
+  );
+}
+
+ReactDOM.createRoot(document.getElementById('root')).render(<KiteQuizTool />);
+</script>
+</body>
+</html>
